fix hamburger menu visibility issue

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -204,19 +204,19 @@ span.software-title{
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-end;
-  background-color: #333
+  background-color: #fff
 }
 
 .topnav{
   position: fixed;
   width: 100%;
   top: 0;
-  background-color: #333
+  background-color: #fff
   // background-color: $backgroundColour;
 }
 
 .nav .icon-bar {
-    background-color: #333;
+    background-color: #fff;
 }
 
 
